Fix margins and alignment in main area

--- a/css/style.css
+++ b/css/style.css
@@ -64,11 +64,11 @@ nav.top-nav>a {
 
 /* Sidebar menu */
 
-.item-page nav {
+nav.sidebar-nav {
   display: inline-block;
   width: 20%;
   vertical-align: top;
-  margin: 10px;
+  margin: 10px 30px 10px 0;
 }
 
 nav.sidebar-nav>a {
@@ -97,12 +97,12 @@ nav.sidebar-nav>a:hover {
 
 main {
   display: inline-block;
-  width: 70%;
+  width: 76%;
 }
 
 .item {
   display: block;
-  max-width: 90%;
+  max-width: 100%;
   margin: 10px auto 30px;
   border: 1px solid #d6d5d5;
 }
